--- a/Mini Grid/index.html
+++ b/Mini Grid/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
   <div class="mini__grid">
-    <div class="mini__grid__items mini__item1"><p id="grid"></p></div>
-    <div class="mini__grid__items mini__item2"><p id="css"></p></div>
+    <div class="mini__grid__items mini__item1"></div>
+    <div class="mini__grid__items mini__item2"></div>
     <div class="mini__grid__items mini__item3"></div>
     <div class="mini__grid__items mini__item4"></div>
+    <div class="mini__grid__items mini__item5"></div>
     <!-- <div class="mini__grid mini__item5">5</div> -->
   </div>
 
