cleand up styles and HTML

--- a/White Grey Black/index.html
+++ b/White Grey Black/index.html
@@ -29,11 +29,9 @@
         </div>
 
       </header>
-
     <div class="overlay">
 
       <div class="hero__wrapper">
-
           <div class="about__me item hide">
             <div class="image__me">
               <img src="img/moz_doggo.jpg" alt="">
@@ -45,6 +43,16 @@
 
         <div class="item item__hero">
           <h1>What is CSS Grid?</h1>
+
+          <div class="mini__grid">
+            <div class="mini__grid__items mini__item1"></div>
+            <div class="mini__grid__items mini__item2"></div>
+            <div class="mini__grid__items mini__item3"></div>
+            <div class="mini__grid__items mini__item4"></div>
+            <div class="mini__grid__items mini__item5"></div>
+            <div class="mini__grid__items mini__item6"></div>
+          </div>
+          
           <p>CSS Grid Layout excels at dividing a page into major regions, or defining the relationship in terms of size, position, and layer, between parts built with HTML containers. CSS Grid Layout is easy to learn and use. It’s quickly changing the game for web design and development.</p>
           <p>This page will give you all the resources and links you need to get started with your first grid. You’ll also find here some resources on Firefox DevTools layout panel, which is the best way to get a glimpse of how the Grid works on your page.</p>
           <p>Lastly, feel free to inspect this site, as it was also built using CSS Grid. Get started by reading about the Grid on MDN and share the love for Grid.</p>
