--- a/Mini Grid/index.html
+++ b/Mini Grid/index.html
@@ -14,7 +14,7 @@
     <div class="mini__grid__items mini__item3"></div>
     <div class="mini__grid__items mini__item4"></div>
     <div class="mini__grid__items mini__item5"></div>
-    <!-- <div class="mini__grid mini__item5">5</div> -->
+    <div class="mini__grid__items mini__item6"></div>
   </div>
 
   <script src="vendor/jquery-3.3.1.js"></script>
