--- a/White Grey Black/index.html
+++ b/White Grey Black/index.html
@@ -15,7 +15,7 @@
       <header>
         <div class="top__nav">
           <div class="nav__items not__visible ni_1"><p><a class="home" href="#">Home</a></p></div>
-          <div class="nav__items not__visible ni_2"><p><a href="#">CSS Grid</a></p></div>
+          <div class="nav__items not__visible ni_2"><p><a class="css_grid" href="#">CSS Grid</a></p></div>
           <div class="nav__items not__visible ni_3"><p class="about"><a href="">About Me</a></p></div>
           <div class="top__nav__hamburger"><a href=""><span>&#9776;</span></a></div>
         </div>
@@ -51,6 +51,7 @@
             <br />
             <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/grid" target="_blank">Learn more</a>
         </div>
+
       </div>
 
       <div class="main__grid">
@@ -86,10 +87,11 @@
       </div>
 
     </div>
+    
       <footer class="">
         <div class="footer__element">
           <div class="footer__items fi_1"><p><a class="home" href="#">Home</a></p></div>
-          <div class="footer__items fi_2"><p><a href="#">CSS Grid</a></p></div>
+          <div class="footer__items fi_2"><p><a class="css_grid" href="#">CSS Grid</a></p></div>
           <div class="footer__items fi_3"><p class="about"><a href="">About Me</a></p></div>
           <div class="footer__items fi_4"><p><small>This was page was built for a final project for General Assembly Front End Web Development course it's author took in January through March of 2018.</small></p></div>
         </div>
